# codeforces-itmo-academy-pilot

./: .gitignore  README.md
disjoint-set-union/lesson-7-1-problem-a/: CMakeLists.txt  README.md
disjoint-set-union/lesson-7-1-problem-b/: CMakeLists.txt  README.md
disjoint-set-union/lesson-7-1-problem-c/: CMakeLists.txt  README.md
disjoint-set-union/lesson-7-1-problem-d/: CMakeLists.txt  README.md
disjoint-set-union/lesson-7-1-problem-e/: CMakeLists.txt  README.md
disjoint-set-union/lesson-7-2-problem-a/: CMakeLists.txt  README.md  main.cpp
disjoint-set-union/lesson-7-2-problem-b/: CMakeLists.txt  README.md  main.cpp
disjoint-set-union/lesson-7-2-problem-c/: CMakeLists.txt  README.md  main.cpp
disjoint-set-union/lesson-7-2-problem-d/: CMakeLists.txt  README.md  main.cpp
disjoint-set-union/lesson-7-2-problem-e/: CMakeLists.txt  README.md  main.cpp
disjoint-set-union/lesson-7-2-problem-f/: CMakeLists.txt  README.md  main.cpp
disjoint-set-union/lesson-7-2-problem-g/: CMakeLists.txt  README.md  main.cpp
disjoint-set-union/lesson-7-2-problem-h/: CMakeLists.txt  README.md  (+1 more)
lesson-4-1-problem-a/: CMakeLists.txt
lesson-4-1-problem-b/: CMakeLists.txt  README.md
lesson-4-1-problem-c/: CMakeLists.txt
lesson-4-2-problem-a/: CMakeLists.txt  main.cpp
lesson-4-2-problem-b/: CMakeLists.txt  main.cpp
lesson-4-2-problem-c/: CMakeLists.txt  main.cpp
lesson-4-2-problem-d/: CMakeLists.txt  README.md  main.cpp
lesson-4-3-problem-a/: CMakeLists.txt  main.cpp
lesson-4-problem-a/: CMakeLists.txt  README.md  main.cpp
lesson-4-problem-b/: CMakeLists.txt  README.md  main.cpp
lesson-4-problem-c/: CMakeLists.txt  README.md  main.cpp
lesson-5-1-problem-a/: CMakeLists.txt  README.md  main.cpp
lesson-7-1-problem-a/: CMakeLists.txt  main.cpp
lesson-7-1-problem-b/: CMakeLists.txt  main.cpp
lesson-7-1-problem-c/: CMakeLists.txt  main.cpp
lesson-7-1-problem-d/: CMakeLists.txt  main.cpp
lesson-7-1-problem-e/: CMakeLists.txt  main.cpp
segment-tree-1/lesson-4-4-problem-b/: CMakeLists.txt  README.md  main.cpp
z-function/lesson-3-1-problem-a/: CMakeLists.txt  README.md  main.cpp
(+168 files in other folders)
